[package]
name = "kvs"
version = "0.1.0"
authors = ["yongxiang.bao <yongxiang.bao@mobilemd.cn>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
structopt = "0.2.18"
failure = "0.1.5"
serde = "1.0.94"
serde_json = "1.0.39"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
